[package]
name = "qp"
version = "0.2.1"
authors = ["Seungjae Park <astro.psj@gmail.com>"]
edition = "2021"
rust-version = "1.56"
description = "Quick Pool: High Performance Async Generic Pool"
repository = "https://github.com/Astro36/qp"
license = "MIT"
keywords = ["async", "resource", "pool", "tokio"]
categories = ["asynchronous", "data-structures"]

[dependencies]
async-trait = "0.1"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt", "rt-multi-thread", "time"] }
